// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wechat should render wechat config after request finish 1`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.wechat
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`wechat should render wechat config after request finish 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.wechat
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <section>
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.wechat.enable_wechat_notify
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <span
                              class="ant-popover-disabled-compatible-wrapper"
                              style="display: inline-block; cursor: not-allowed;"
                            >
                              <button
                                class="ant-btn ant-btn-primary"
                                disabled=""
                                style="pointer-events: none;"
                                type="submit"
                              >
                                <span>
                                  system.wechat.test
                                </span>
                              </button>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn ant-btn-primary"
                              type="button"
                            >
                              <span>
                                common.modify
                              </span>
                            </button>
                          </div>
                        </div>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
        hidden=""
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable_wechat_notify"
                title="system.wechat.enable_wechat_notify"
              >
                system.wechat.enable_wechat_notify
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    id="enable_wechat_notify"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-no-colon"
                title=" "
              >
                 
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-primary"
                        type="submit"
                      >
                        <span>
                          common.submit
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default"
                        type="button"
                      >
                        <span>
                          common.cancel
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`wechat should send test request when user input receiver id and submit request 1`] = `
<body>
  <style
    data-rc-order="append"
    rc-util-key="antd-wave"
  />
  <div>
    <div
      class="ant-card ant-card-bordered"
    >
      <div
        class="ant-card-head"
      >
        <div
          class="ant-card-head-wrapper"
        >
          <div
            class="ant-card-head-title"
          >
            system.title.wechat
          </div>
        </div>
      </div>
      <div
        class="ant-card-body"
      >
        <section>
          <div
            class="ant-descriptions"
          >
            <div
              class="ant-descriptions-view"
            >
              <table>
                <tbody>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          system.wechat.enable_wechat_notify
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          common.open
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          system.wechat.corp_id
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          123123123
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          system.wechat.agent_id
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          12312312312122
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          system.wechat.safe_enabled
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          common.close
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-label"
                        >
                          system.wechat.proxy_ip
                        </span>
                        <span
                          class="ant-descriptions-item-content"
                        >
                          1.1.1.1
                        </span>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-descriptions-row"
                  >
                    <td
                      class="ant-descriptions-item"
                      colspan="3"
                    >
                      <div
                        class="ant-descriptions-item-container"
                      >
                        <span
                          class="ant-descriptions-item-content"
                        >
                          <div
                            class="ant-space ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                ant-click-animating-without-extra-node="false"
                                class="ant-btn ant-btn-primary ant-popover-open"
                                type="submit"
                              >
                                <span>
                                  system.wechat.test
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn ant-btn-primary"
                                type="button"
                              >
                                <span>
                                  common.modify
                                </span>
                              </button>
                            </div>
                          </div>
                        </span>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </section>
        <form
          class="ant-form ant-form-horizontal"
          hidden=""
        >
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class=""
                  for="enable_wechat_notify"
                  title="system.wechat.enable_wechat_notify"
                >
                  system.wechat.enable_wechat_notify
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="true"
                      class="ant-switch ant-switch-checked"
                      id="enable_wechat_notify"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class="ant-form-item-required"
                  for="corp_id"
                  title="system.wechat.corp_id"
                >
                  system.wechat.corp_id
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="corp_id"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class="ant-form-item-required"
                  for="agent_id"
                  title="system.wechat.agent_id"
                >
                  system.wechat.agent_id
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="agent_id"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class="ant-form-item-required"
                  for="corp_secret"
                  title="system.wechat.corp_secret"
                >
                  system.wechat.corp_secret
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-password"
                    >
                      <input
                        aria-required="true"
                        class="ant-input"
                        id="corp_secret"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class=""
                  for="safe_enabled"
                  title="system.wechat.safe_enabled"
                >
                  system.wechat.safe_enabled
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      aria-checked="false"
                      class="ant-switch"
                      id="safe_enabled"
                      role="switch"
                      type="button"
                    >
                      <div
                        class="ant-switch-handle"
                      />
                      <span
                        class="ant-switch-inner"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class=""
                  for="proxy_ip"
                  title="system.wechat.proxy_ip"
                >
                  system.wechat.proxy_ip
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input"
                      id="proxy_ip"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=" "
                >
                   
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="submit"
                        >
                          <span>
                            common.submit
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-default"
                          type="button"
                        >
                          <span>
                            common.cancel
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="ant-popover"
        style="opacity: 0;"
      >
        <div
          class="ant-popover-content"
        >
          <div
            class="ant-popover-arrow"
          >
            <span
              class="ant-popover-arrow-content"
            />
          </div>
          <div
            class="ant-popover-inner"
            role="tooltip"
          >
            <div
              class="ant-popover-inner-content"
            >
              <div
                class="ant-space ant-space-vertical full-width-element"
              >
                <div
                  class="ant-space-item"
                  style="margin-bottom: 8px;"
                >
                  <div
                    class="ant-row"
                  >
                    <div
                      class="ant-col ant-col-8 flex-all-center"
                    >
                      system.wechat.receiveWechat
                    </div>
                    <div
                      class="ant-col ant-col-16"
                    >
                      <input
                        class="ant-input"
                        data-testid="receivername"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <div
                    class="ant-row"
                  >
                    <div
                      class="ant-col ant-col-24"
                      style="text-align: right;"
                    >
                      <button
                        class="ant-btn ant-btn-primary ant-btn-sm"
                        type="button"
                      >
                        <span>
                          common.ok
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`wechat should update wechat config after user input config form 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.wechat
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <section
        hidden=""
      >
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.wechat.enable_wechat_notify
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <span
                              class="ant-popover-disabled-compatible-wrapper"
                              style="display: inline-block; cursor: not-allowed;"
                            >
                              <button
                                class="ant-btn ant-btn-primary"
                                disabled=""
                                style="pointer-events: none;"
                                type="submit"
                              >
                                <span>
                                  system.wechat.test
                                </span>
                              </button>
                            </span>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              ant-click-animating-without-extra-node="false"
                              class="ant-btn ant-btn-primary"
                              type="button"
                            >
                              <span>
                                common.modify
                              </span>
                            </button>
                          </div>
                        </div>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable_wechat_notify"
                title="system.wechat.enable_wechat_notify"
              >
                system.wechat.enable_wechat_notify
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    id="enable_wechat_notify"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-no-colon"
                title=" "
              >
                 
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        class="ant-btn ant-btn-primary"
                        type="submit"
                      >
                        <span>
                          common.submit
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default"
                        type="button"
                      >
                        <span>
                          common.cancel
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`wechat should update wechat config after user input config form 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.wechat
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <section
        hidden=""
      >
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.wechat.enable_wechat_notify
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn ant-btn-primary ant-btn-loading"
                              type="submit"
                            >
                              <span
                                class="ant-btn-loading-icon"
                              >
                                <span
                                  aria-label="loading"
                                  class="anticon anticon-loading anticon-spin"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="loading"
                                    fill="currentColor"
                                    focusable="false"
                                    height="1em"
                                    viewBox="0 0 1024 1024"
                                    width="1em"
                                  >
                                    <path
                                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                                    />
                                  </svg>
                                </span>
                              </span>
                              <span>
                                system.wechat.test
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              ant-click-animating-without-extra-node="true"
                              class="ant-btn ant-btn-primary"
                              type="button"
                            >
                              <span>
                                common.modify
                              </span>
                            </button>
                          </div>
                        </div>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable_wechat_notify"
                title="system.wechat.enable_wechat_notify"
              >
                system.wechat.enable_wechat_notify
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="true"
                    class="ant-switch ant-switch-checked"
                    id="enable_wechat_notify"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="corp_id"
                title="system.wechat.corp_id"
              >
                system.wechat.corp_id
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="corp_id"
                    type="text"
                    value="123123123"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="agent_id"
                title="system.wechat.agent_id"
              >
                system.wechat.agent_id
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input ant-input-status-success"
                    id="agent_id"
                    type="text"
                    value="1234567"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="corp_secret"
                title="system.wechat.corp_secret"
              >
                system.wechat.corp_secret
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper ant-input-password ant-input-affix-wrapper-status-success"
                  >
                    <input
                      aria-required="true"
                      class="ant-input"
                      id="corp_secret"
                      type="password"
                      value="aaabbb"
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="eye-invisible"
                        class="anticon anticon-eye-invisible ant-input-password-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="eye-invisible"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                          />
                          <path
                            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="safe_enabled"
                title="system.wechat.safe_enabled"
              >
                system.wechat.safe_enabled
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    id="safe_enabled"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="proxy_ip"
                title="system.wechat.proxy_ip"
              >
                system.wechat.proxy_ip
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="proxy_ip"
                    type="text"
                    value="1.1.1.1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-no-colon"
                title=" "
              >
                 
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <button
                        ant-click-animating-without-extra-node="true"
                        class="ant-btn ant-btn-primary ant-btn-loading"
                        type="submit"
                      >
                        <span
                          class="ant-btn-loading-icon"
                        >
                          <span
                            aria-label="loading"
                            class="anticon anticon-loading anticon-spin"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="loading"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="0 0 1024 1024"
                              width="1em"
                            >
                              <path
                                d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span>
                          common.submit
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-default"
                        disabled=""
                        type="button"
                      >
                        <span>
                          common.cancel
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`wechat should update wechat config after user input config form 3`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.wechat
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
